fix name wrap

--- a/src/About/about.css
+++ b/src/About/about.css
@@ -34,5 +34,10 @@
     font-weight: bold;
     margin: 0 auto 20px auto;
     padding: 10px;
-    border: 1px solid black
+    border: 1px solid black;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;  
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;    
+    word-wrap: break-word; 
 }
